<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"

    android:orientation="vertical">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/border_header">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="50dp"
            android:layout_height="?actionBarSize"
            android:layout_gravity="center"
            android:contentDescription="@string/icon_desc"
            android:src="@drawable/final_logo_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginStart="10dp"/>

        <View style="@style/TitleBarSpring" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25sp"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/summaryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/summary_hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@android:color/holo_red_dark"
            android:onClick="onCancel"
            android:layout_marginEnd="5dp"
            android:text="cancel" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSave"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>