<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/_196sdp"
        android:layout_height="@dimen/_196sdp"
        android:background="@drawable/ic_launcher_web" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/choose_language"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdEng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/english"
                android:textSize="@dimen/_14sdp" />

            <RadioButton
                android:id="@+id/rdArb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/arbic"
                android:textSize="@dimen/_14sdp" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@color/colorPrimary"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp" />


</LinearLayout>