<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/white_color_rect_shape"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_84sdp"
            android:layout_height="@dimen/_84sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/done" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/muli_semibold"
            android:text="@string/booking_successful"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_regular"
            android:text="@string/your_booking_has_been_confirmed"
            android:textColor="@color/view_grey_bg"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/tvDriverMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/muli_regular"
            android:gravity="center"
            android:text="@string/you_will_get_driver_details_30_min_before_of_your_booking"
            android:textColor="@color/view_grey_bg"
            android:textSize="@dimen/_14sdp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@color/view_grey_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_44sdp"
                android:layout_weight="1"
                android:fontFamily="@font/muli_semibold"
                android:gravity="center"
                android:text="@string/done"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
