<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
<androidx.cardview.widget.CardView
    android:layout_width="300dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_dialog_choose_shape"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rgLocationChooser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checkedButton="@id/rbHome"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home" />

            <RadioButton
                android:id="@+id/rbWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:text="@string/work" />

            <RadioButton
                android:id="@+id/rbOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other" />


        </RadioGroup>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/_15sdp">

            <ImageView
                android:id="@+id/ivLove"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/red_love"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAddressLocation"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:gravity="center|start"
                android:maxLines="2"
                android:text="Sukhrali"
                android:textColor="@color/light_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivLove"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/view_grey_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCancelDialog"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="38dp"
                android:background="@color/view_grey_bg" />

            <TextView
                android:id="@+id/tvSaveAddressLocation"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
</LinearLayout>