<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/border_header"
        android:elevation="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            android:src="@drawable/ic_back"
            app:tint="@color/white"/>

        <com.speed.user.utills.MyBoldTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/legal"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/text_color_white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.speed.user.utills.MyTextView
            android:id="@+id/copyrightTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:text="@string/copyright"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/_15sdp" />

        <com.speed.user.utills.MyTextView
            android:id="@+id/termsConditionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:text="@string/terms_amp_conditions"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/_15sdp" />

        <com.speed.user.utills.MyTextView
            android:id="@+id/privacyPolicyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:text="@string/privacy_policy_"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>